added cards page and connected home page to card page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,16 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Life In Paradise
+      <!--Homework Two - Card List with favorite, share, & delete button icons-->
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
+  Travel vicariously to paradise...
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
+    Click below to go to check out great places to travel.
   </p>
+  <button ion-button (click)="goToCards()">Click here to view list</button>
 </ion-content>
