Added delete button with functionality. Attempted to make outline of shared button. Added in images. Updated Cards Information(title, description, image path).

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,8 +9,16 @@
 
 <ion-content padding>
   Travel vicariously to paradise...
+  <br/><br>
+  <div>
+
+    <img height="200px" width="200px" src="../../assets/images/lilCottage.jpg"/>
+
+  </div>
+
   <p>
     Click below to go to check out great places to travel.
   </p>
-  <button ion-button (click)="goToCards()">Click here to view list</button>
+
+  <button color="secondary" ion-button (click)="goToCards()">View Destinations</button>
 </ion-content>
