Changed Bora Bora and Bighorn Wyoming Card descriptions

--- a/src/pages/cards/cards.html
+++ b/src/pages/cards/cards.html
@@ -15,8 +15,8 @@
 <!--need fav share(need outline to solid state) & delete (must delete)-->
 <ion-content padding>
     <p>My cards feature {{cards.length}} destinations.</p>
-    <ion-card style="width:300px; height:375px" *ngFor="let card of cards">
-        <img src="assets/image/{{card.imgPath}}"/>
+    <ion-card style="width:300px; height:525px" *ngFor="let card of cards">
+        <img src="assets/images/{{card.imgPath}}"/>
         <ion-card-content>
             <ion-card-title>
                 {{card.title}}
